--- a/404.md
+++ b/404.md
@@ -6,6 +6,6 @@ Sorry, the requested resource was not found.
 
 We know, it's hard to believe, but we did look everywhere!
 
-![Our data center](media/404-data-center.jpg)
+![Our data center](https://raw.githubusercontent.com/sictweb/resources/master/404-data-center-1000.jpg)
 
 <br>
